# individualv2

./: Basic.cpp  Basic.h  BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  Launcher.cpp  Launcher.h  Menu.cpp  Menu.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  Sheet.cpp  Sheet.h  Sorter.cpp  Sorter.h  Tester.cpp  Tester.h  Timer.cpp  Timer.h  diagram.mdj  main.cpp
