cmake_minimum_required(VERSION 3.27)
project(individualv2)

set(CMAKE_CXX_STANDARD 14)

add_executable(individualv2
    main.cpp
        Launcher.cpp
        Launcher.h
        Menu.cpp
        Menu.h
        QuickSort.cpp
        QuickSort.h
        Sheet.cpp
        Sheet.h
        Sorter.cpp
        Sorter.h
        Tester.cpp
        Tester.h
        Timer.cpp
        Timer.h
        Basic.h
        Basic.cpp
        BubbleSort.cpp
        BubbleSort.h
        MergeSort.cpp
        MergeSort.h
)
